--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,4 @@
-version: '3.4'
-
-networks:
-  reaction:
-    external:
-      name: reaction.localhost
+version: '3'
 
 services:
   web:
@@ -18,6 +13,12 @@ services:
       reaction:
     ports:
       - 4000:4000
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-web-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-web
 
   reaction-admin:
     image: reactioncommerce/admin:3.0.0-beta.13
@@ -30,8 +31,14 @@ services:
       default:
       reaction:
     ports:
+      - "80:80"
       - "4080:4080"
-      - "9231:9229"
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-admin-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-admin
 
   api:
     image: reactioncommerce/reaction:3.11.1
@@ -44,6 +51,12 @@ services:
       reaction:
     ports:
       - "3000:3000"
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-api-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-api
 
   mongo:
     image: mongo:4.2.0
@@ -58,7 +71,12 @@ services:
     healthcheck: # re-run rs.initiate() after startup if it failed.
       test: test $$(echo "rs.status().ok || rs.initiate().ok" | mongo --quiet) -eq 1
       interval: 10s
-      start_period: 30s
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-mongo-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-mongo
 
   hydra-migrate:
     image: oryd/hydra:v1.0.8
@@ -70,6 +88,12 @@ services:
       reaction:
     env_file: "hydra-migrate.env"
     restart: on-failure
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-hydra-migrate-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-hydra-migrate
     
   hydra:
     image: oryd/hydra:v1.0.8
@@ -88,7 +112,14 @@ services:
       # Port for hydra token user
       - "5555:5555"
     env_file: "hydra-migrate.env"
-    restart: unless-stopped  
+    restart: unless-stopped
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-hydra-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-hydra
+
   postgres:
     image: postgres:10.3
     environment:
@@ -99,9 +130,15 @@ services:
       default:
       reaction:
     ports:
-      - 5432
+      - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-postgres-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-postgres
 
   identity:
     image: reactioncommerce/identity:3.3.0
@@ -116,6 +153,12 @@ services:
       reaction:
     ports:
       - "4100:4100"
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-identity-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-identity
 
 volumes:
   mongo-db4:
