--- a/archive.yml
+++ b/archive.yml
@@ -3,6 +3,9 @@ version: '3'
 services:
   web:
     image: reactioncommerce/example-storefront:4.0.2
+    depends_on:
+      - api
+      - mongo
     env_file:
       - ./web.env
     ports:
@@ -16,9 +19,13 @@ services:
 
   reaction-admin:
     image: reactioncommerce/admin:3.0.0-beta.13
+    depends_on:
+      - api
+      - mongo
     env_file:
       - ./reaction-admin.env
     ports:
+      - "80:80"
       - "4080:4080"
     logging:
       driver: awslogs
@@ -26,6 +33,74 @@ services:
         awslogs-group: reaction-admin-logs
         awslogs-region: eu-west-1
         awslogs-stream-prefix: reaction-admin
+
+  api:
+    image: reactioncommerce/reaction:3.11.1
+    depends_on:
+      - mongo
+    env_file:
+      - ./reaction-api.env
+    ports:
+      - "3000:3000"
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-api-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-api
+
+  mongo:
+    image: mongo:4.2.0
+    command: mongod --oplogSize 128 --replSet rs0 --storageEngine=wiredTiger
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-db4:/data/db
+    healthcheck: # re-run rs.initiate() after startup if it failed.
+      test: test $$(echo "rs.status().ok || rs.initiate().ok" | mongo --quiet) -eq 1
+      interval: 10s
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-mongo-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-mongo
+
+  hydra-migrate:
+    image: oryd/hydra:v1.0.8
+    command: migrate sql -e -y
+    depends_on:
+      - postgres
+    env_file: "hydra-migrate.env"
+    restart: on-failure
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-hydra-migrate-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-hydra-migrate
+    
+  hydra:
+    image: oryd/hydra:v1.0.8
+    command: serve all --dangerous-force-http
+    depends_on:
+      - hydra-migrate
+      - postgres
+    ports:
+      # Public port
+      - "4444:4444"
+      # Admin port
+      - "4445:4445"
+      # Port for hydra token user
+      - "5555:5555"
+    env_file: "hydra-migrate.env"
+    restart: unless-stopped
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-hydra-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-hydra
 
   postgres:
     image: postgres:10.3
@@ -44,70 +119,12 @@ services:
         awslogs-region: eu-west-1
         awslogs-stream-prefix: reaction-postgres
 
-  mongo:
-    image: mongo:4.2.0
-    command: mongod --oplogSize 128 --replSet rs0 --storageEngine=wiredTiger
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-db4:/data/db
-    healthcheck:
-      test: test $$(echo "rs.status().ok || rs.initiate().ok" | mongo --quiet) -eq 1
-      interval: 10s
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-mongo-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-mongo
-
-  api:
-    image: reactioncommerce/reaction:3.11.1
-    environment:
-      - MONGO_URL=mongodb://localhost:27017/reaction
-      - ROOT_URL=http://localhost:3000
-      - STRIPE_API_KEY=YOUR_PRIVATE_STRIPE_API_KEY      
-    ports:
-      - "3000:3000"
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-api-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-api
-
-  hydra-migrate:
-    image: oryd/hydra:v1.0.8
-    command: migrate sql -e -y
-    env_file:
-      - ./hydra-migrate.env
-    restart: on-failure
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-hydra-migrate-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-hydra-migrate
-    
-  hydra:
-    image: oryd/hydra:v1.0.8
-    command: serve all --dangerous-force-http
-    ports:
-      - "4444:4444"
-      - "4445:4445"
-      - "5555:5555"
-    env_file:
-      - ./hydra-migrate.env
-    restart: unless-stopped
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-hydra-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-hydra
-
   identity:
     image: reactioncommerce/identity:3.3.0
+    depends_on:
+      - hydra-migrate
+      - hydra
+      - mongo
     env_file:
       - ./reaction-identity.env
     ports:
