--- a/archive.yml
+++ b/archive.yml
@@ -80,27 +80,27 @@ services:
         awslogs-region: eu-west-1
         awslogs-stream-prefix: reaction-hydra-migrate
     
-  hydra:
-    image: oryd/hydra:v1.0.8
-    command: serve all --dangerous-force-http
-    depends_on:
-      - hydra-migrate
-      - postgres
-    ports:
-      # Public port
-      - "4444:4444"
-      # Admin port
-      - "4445:4445"
-      # Port for hydra token user
-      - "5555:5555"
-    env_file: "hydra-migrate.env"
-    restart: unless-stopped
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-hydra-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-hydra
+  # hydra:
+  #   image: oryd/hydra:v1.0.8
+  #   command: serve all --dangerous-force-http
+  #   depends_on:
+  #     - hydra-migrate
+  #     - postgres
+  #   ports:
+  #     # Public port
+  #     - "4444:4444"
+  #     # Admin port
+  #     - "4445:4445"
+  #     # Port for hydra token user
+  #     - "5555:5555"
+  #   env_file: "hydra-migrate.env"
+  #   restart: unless-stopped
+  #   logging:
+  #     driver: awslogs
+  #     options: 
+  #       awslogs-group: reaction-hydra-logs
+  #       awslogs-region: eu-west-1
+  #       awslogs-stream-prefix: reaction-hydra
 
   postgres:
     image: postgres:10.3
