Added tested hydra integration - still not working

--- a/web.env
+++ b/web.env
@@ -8,7 +8,7 @@ OAUTH2_ADMIN_URL=http://localhost:4445
 OAUTH2_AUTH_URL=http://localhost:4444/oauth2/auth
 OAUTH2_CLIENT_ID=example-storefront
 OAUTH2_CLIENT_SECRET=CHANGEME
-OAUTH2_PUBLIC_LOGOUT_URL=http://localhost:4444/oauth2/sessions/logout
+OAUTH2_PUBLIC_LOGOUT_URL=http://locahost:4444/oauth2/sessions/logout
 OAUTH2_HOST=localhost
 OAUTH2_IDP_PUBLIC_CHANGE_PASSWORD_URL=http://localhost:4100/account/change-password?email=EMAIL&from=FROM
 OAUTH2_IDP_HOST_URL=http://localhost:4100
