--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,47 @@
 version: '3'
 
 services:
+  identity:
+    image: reactioncommerce/identity:3.3.0
+    env_file:
+      - ./reaction-identity.env
+    ports:
+      - "4100:4100"
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-identity-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-identity
+        
+  hydra:
+    image: oryd/hydra:v1.0.8
+    command: serve all --dangerous-force-http
+    ports:
+      - "4444:4444"
+      - "4445:4445"
+      - "5555:5555"
+    environment:
+      - DSN=postgres://hydra:changeme@3.249.242.239:5432/hydra?sslmode=disable
+      - OAUTH2_EXPOSE_INTERNAL_ERRORS=true
+      - OIDC_SUBJECT_IDENTIFIERS_ENABLED=true
+      - OIDC_SUBJECT_IDENTIFIERS_PAIRWISE_SALT=SLIJGmcFboz59JGd9wH4lqdHHTJztw-j
+      - SECRETS_SYSTEM=SLIJGmcFboz59JGd9wH4lqdHHTJztw-j
+      - SERVE_PUBLIC_CORS_ALLOWED_ORIGINS=http://localhost:4080
+      - SERVE_PUBLIC_CORS_ENABLED=true
+      - URLS_CONSENT=http://localhost:4100/consent
+      - URLS_ERROR=http://localhost:4100/account/oauth-error
+      - URLS_LOGIN=http://localhost:4100/login
+      - URLS_LOGOUT=http://localhost:4100/logout
+      - URLS_SELF_ISSUER=http://localhost:4444
+    restart: unless-stopped
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: reaction-hydra-logs
+        awslogs-region: eu-west-1
+        awslogs-stream-prefix: reaction-hydra
+
   web:
     image: reactioncommerce/example-storefront:4.0.2
     env_file:
@@ -27,29 +68,12 @@ services:
         awslogs-region: eu-west-1
         awslogs-stream-prefix: reaction-admin
 
-  mongo:
-    image: mongo:4.2.0
-    command: mongod --oplogSize 128 --replSet rs0 --storageEngine=wiredTiger
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-db4:/data/db
-    healthcheck:
-      test: test $$(echo "rs.status().ok || rs.initiate().ok" | mongo --quiet) -eq 1
-      interval: 10s
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-mongo-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-mongo
-
   api:
     image: reactioncommerce/reaction:3.11.1
     environment:
-      - MONGO_URL=mongodb://localhost:27017/reaction
+      - MONGO_URL=mongodb://3.249.242.239:27017/reaction
       - ROOT_URL=http://localhost:3000
-      - STRIPE_API_KEY=YOUR_PRIVATE_STRIPE_API_KEY      
+      - STRIPE_API_KEY=YOUR_PRIVATE_STRIPE_API_KEY     
     ports:
       - "3000:3000"
     logging:
@@ -59,36 +83,3 @@ services:
         awslogs-region: eu-west-1
         awslogs-stream-prefix: reaction-api
 
-  identity:
-    image: reactioncommerce/identity:3.3.0
-    env_file:
-      - ./reaction-identity.env
-    ports:
-      - "4100:4100"
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-identity-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-identity
-
-  postgres:
-    image: postgres:10.3
-    environment:
-      - POSTGRES_USER=hydra
-      - POSTGRES_PASSWORD=changeme
-      - POSTGRES_DB=hydra
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    logging:
-      driver: awslogs
-      options: 
-        awslogs-group: reaction-postgres-logs
-        awslogs-region: eu-west-1
-        awslogs-stream-prefix: reaction-postgres
-
-volumes:
-  mongo-db4:
-  postgres-data:
