--- a/hydra-migrate.env
+++ b/hydra-migrate.env
@@ -1,8 +1,8 @@
-DSN=postgres://hydra:changeme@localhost:5432/hydra?sslmode=disable
+DSN=postgres://hydra:changeme@3.249.242.239:5432/hydra?sslmode=disable
 OAUTH2_EXPOSE_INTERNAL_ERRORS=true
 OIDC_SUBJECT_IDENTIFIERS_ENABLED=true
-OIDC_SUBJECT_IDENTIFIERS_PAIRWISE_SALT=youReallyNeedToChangeThis
-SECRETS_SYSTEM=youReallyNeedToChangeThis
+OIDC_SUBJECT_IDENTIFIERS_PAIRWISE_SALT=thisisallmyfault
+SECRETS_SYSTEM=SLIJGmcEboz59JBd9wH4lqdHHTJztw-j
 SERVE_PUBLIC_CORS_ALLOWED_ORIGINS=http://localhost:4080
 SERVE_PUBLIC_CORS_ENABLED=true
 URLS_CONSENT=http://localhost:4100/consent
