--- a/reaction-admin.env
+++ b/reaction-admin.env
@@ -1,8 +1,8 @@
 
 METEOR_DISABLE_OPTIMISTIC_CACHING=1
 METEOR_WATCH_POLLING_INTERVAL_MS=10000
-MONGO_OPLOG_URL=mongodb://localhost:27017/local
-MONGO_URL=mongodb://localhost:27017/reaction
+MONGO_OPLOG_URL=mongodb://3.249.242.239:27017/local
+MONGO_URL=mongodb://3.249.242.239:27017/reaction
 NODE_ENV=development
 OAUTH2_ADMIN_URL=http://localhost:4445
 OAUTH2_IDP_PUBLIC_CHANGE_PASSWORD_URL=http://localhost:4100/account/change-password?email=EMAIL&from=FROM
