--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -1,5 +1,10 @@
 version: '3'
 
+networks:
+  reaction:
+    external:
+      name: reaction.localhost
+
 services:
   postgres:
     image: postgres:10.3
@@ -11,6 +16,9 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      default:
+      reaction:
     logging:
       driver: awslogs
       options: 
@@ -28,6 +36,9 @@ services:
     healthcheck:
       test: test $$(echo "rs.status().ok || rs.initiate().ok" | mongo --quiet) -eq 1
       interval: 10s
+    networks:
+      default:
+      reaction:
     logging:
       driver: awslogs
       options: 
