--- a/docker-compose-migrate.yml
+++ b/docker-compose-migrate.yml
@@ -1,11 +1,19 @@
 version: '3'
 
+networks:
+  reaction:
+    external:
+      name: reaction.localhost
+
 services:
   hydra-migrate:
     image: oryd/hydra:v1.0.8
     command: migrate sql -e -y
+    networks:
+      default:
+      reaction:
     environment:
-      - DSN=postgres://hydra:changeme@3.249.242.239:5432/hydra?sslmode=disable
+      - DSN=postgres://hydra:changeme@63.35.212.3:5432/hydra?sslmode=disable
       - OAUTH2_EXPOSE_INTERNAL_ERRORS=true
       - OIDC_SUBJECT_IDENTIFIERS_ENABLED=true
       - OIDC_SUBJECT_IDENTIFIERS_PAIRWISE_SALT=thisisallmyfault
