--- a/reaction-api.env
+++ b/reaction-api.env
@@ -1,3 +1,4 @@
-MONGO_URL=mongodb://3.249.242.239:27017/reaction
+
+MONGO_URL=mongodb://mongo.reaction.localhost:27017/reaction
 ROOT_URL=http://localhost:3000
 STRIPE_API_KEY=YOUR_PRIVATE_STRIPE_API_KEY
